--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -582,7 +582,8 @@ footer {
         left: 0;
         right: 0;
         z-index: 99;
-        max-height: 220px;
+        height: 220px;
+
         overflow-y: auto;
         border: 2px solid transparent;
         border-color: transparent $teal-700 $teal-700 $teal-700;
@@ -603,6 +604,7 @@ footer {
           border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
           cursor: pointer;
           user-select: none;
+          max-height: 3.875rem;
           &:hover{
             background-color: $teal-50;
           }
@@ -634,6 +636,25 @@ footer {
     }
   
 }
+.label-search{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+input.select-search {
+  padding-left: 0.375rem;
+  border-radius: 0!important;
+  max-height: 2.875rem;
+
+}
+
+input.select-search:focus {
+  outline-color: #ffffff!important;
+  border-radius: 0!important;
+  -moz-outline-radius: 0.675rem;
+  outline-width: 1px!important;
+  outline-style: solid;
+}
 
 input[type="text"] {
   background: #ffffff;
@@ -641,6 +662,7 @@ input[type="text"] {
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 0.375rem;
   padding-block: 0.625rem;
+  
   &:focus{
     outline-color:$teal-700  !important;
     border-radius: 0.375rem;
