--- a/layouts/results/single.html
+++ b/layouts/results/single.html
@@ -30,68 +30,424 @@
                         <h3 id="red-x" class="d-flex align-items-center">{{ partial "fontawesome.html" "solid/square-xmark" }} <span class="ms-2">Countries where content is blocked in the last 24h</span></h3>
                         <hr>
                     </div>
+                    <table class="last24-results">
+                        <thead>
+                          <tr>
+                            <th>Status</th>
+                            <th>ID</th>
+                            <th>Date</th>
+                            <th>Vantage Point</th>
+                          </tr>
+                        </thead>
+                        <tbody id="table-body-last24"></tbody>
+                      </table>
+                      <p id="table-message-last24" class="text-muted"></p>
                 </section>
                 <section id="past-results-table" class="py-4">
                     <div class="row">
                         <h3 id="green-results" class="d-flex align-items-center">{{ partial "fontawesome.html" "solid/flask" }} <span class="ms-2">Explore past test results for the same content</span></h3>
                         <hr>
                     </div>
+                    <table class="past-results">
+                        <thead>
+                          <tr>
+                            <th>Status</th>
+                            <th>ID</th>
+                            <th>Date</th>
+                            <th>Vantage Point</th>
+                          </tr>
+                        </thead>
+                        <tbody id="table-body-past"></tbody>
+                      </table>
+                      <p id="table-message-past" class="text-muted"></p>
                 </section>
             </div>
         </div>
     </div>
 
     <script>
-    // Function to get the query parameters on load, by fetching the country code and content URL
-    const queryString = window.location.search;
-    const urlParams = new URLSearchParams(queryString);
-    const countries = urlParams.getAll("country");
-    const url = urlParams.get("url");
-    const urlPlaceholder = document.querySelector('#test-url');
-    const countryPlaceholder = document.querySelector('#test-country');
+     // Function to get the query parameters on load, by fetching the country code and content URL
+ const queryString = window.location.search;
+ const urlParams = new URLSearchParams(queryString);
+ const countries = urlParams.getAll("country");
+ const url = decodeURIComponent(urlParams.get("url"));
+ const urlPlaceholder = document.querySelector('#test-url');
+ const countryPlaceholder = document.querySelector('#test-country');
 
-    // Check if someone opens the page without using URL query parameters, if yes, show message
-    if (url !== "" ) {
-        urlPlaceholder.innerHTML = url;
-        urlPlaceholder.href = url;
-    }
-    else { 
-        urlPlaceholder.innerHTML = "You didn't set a URL to test"; 
-    }
+ // Define the mapping of country codes to full names
 
-    if (countries !== "" || countries != null ) {
-        countryPlaceholder.innerHTML = countries; 
-        console.log("Selected countries:", countries);
-    }
-    else { 
-        countryPlaceholder.innerHTML = "You didn't select the country"; 
-    }
-    
-    // Make a request via Fetch API towards the backend on port 2002
-    // Method is POST, and response is in JSON
-    // Body contains the URL and the country code
-    fetch('https://localhost:2002/submission', {
-        method: 'POST',
-        headers: { 
-            'Content-Type': 'application/json' 
-        },
-        body: '{"url":$url,"countryCodes":[$country]}'
-    }).then(function (response) {
-    // The API call was successful!
-    if (response.ok) {
-        return response.json();
-    } 
-    else {
-        return Promise.reject(response);
-    }
-    }).then(function (data) {
-        // This is the JSON from our response
-        console.log(data);
-    }).catch(function (err) {
-        // There was an error
-        console.warn('Something went wrong.', err);
-    });
-    
+ const countryNames = {
+     AF: 'Afghanistan',
+     AX: 'Aland Islands',
+     AL: 'Albania',
+     DZ: 'Algeria',
+     AS: 'American Samoa',
+     AD: 'Andorra',
+     AO: 'Angola',
+     AI: 'Anguilla',
+     AQ: 'Antarctica',
+     AG: 'Antigua and Barbuda',
+     AR: 'Argentina',
+     AM: 'Armenia',
+     AW: 'Aruba',
+     AU: 'Australia',
+     AT: 'Austria',
+     AZ: 'Azerbaijan',
+     BS: 'Bahamas',
+     BH: 'Bahrain',
+     BD: 'Bangladesh',
+     BB: 'Barbados',
+     BY: 'Belarus',
+     BE: 'Belgium',
+     BZ: 'Belize',
+     BJ: 'Benin',
+     BM: 'Bermuda',
+     BT: 'Bhutan',
+     BO: 'Bolivia',
+     BQ: 'Bonaire, Sint Eustatius and Saba',
+     BA: 'Bosnia and Herzegovina',
+     BW: 'Botswana',
+     BV: 'Bouvet Island',
+     BR: 'Brazil',
+     IO: 'British Indian Ocean Territory',
+     BN: 'Brunei Darussalam',
+     BG: 'Bulgaria',
+     BF: 'Burkina Faso',
+     BI: 'Burundi',
+     KH: 'Cambodia',
+     CM: 'Cameroon',
+     CA: 'Canada',
+     CV: 'Cape Verde',
+     KY: 'Cayman Islands',
+     CF: 'Central African Republic',
+     TD: 'Chad',
+     CL: 'Chile',
+     CN: 'China',
+     CX: 'Christmas Island',
+     CC: 'Cocos (Keeling) Islands',
+     CO: 'Colombia',
+     KM: 'Comoros',
+     CG: 'Congo',
+     CD: 'Congo, Democratic Republic of the Congo',
+     CK: 'Cook Islands',
+     CR: 'Costa Rica',
+     CI: "Cote D'Ivoire",
+     HR: 'Croatia',
+     CU: 'Cuba',
+     CW: 'Curacao',
+     CY: 'Cyprus',
+     CZ: 'Czech Republic',
+     DK: 'Denmark',
+     DJ: 'Djibouti',
+     DM: 'Dominica',
+     DO: 'Dominican Republic',
+     EC: 'Ecuador',
+     EG: 'Egypt',
+     SV: 'El Salvador',
+     GQ: 'Equatorial Guinea',
+     ER: 'Eritrea',
+     EE: 'Estonia',
+     ET: 'Ethiopia',
+     FK: 'Falkland Islands (Malvinas)',
+     FO: 'Faroe Islands',
+     FJ: 'Fiji',
+     FI: 'Finland',
+     FR: 'France',
+     GF: 'French Guiana',
+     PF: 'French Polynesia',
+     TF: 'French Southern Territories',
+     GA: 'Gabon',
+     GM: 'Gambia',
+     GE: 'Georgia',
+     DE: 'Germany',
+     GH: 'Ghana',
+     GI: 'Gibraltar',
+     GR: 'Greece',
+     GL: 'Greenland',
+     GD: 'Grenada',
+     GP: 'Guadeloupe',
+     GU: 'Guam',
+     GT: 'Guatemala',
+     GG: 'Guernsey',
+     GN: 'Guinea',
+     GW: 'Guinea-Bissau',
+     GY: 'Guyana',
+     HT: 'Haiti',
+     HM: 'Heard Island and Mcdonald Islands',
+     VA: 'Holy See (Vatican City State)',
+     HN: 'Honduras',
+     HK: 'Hong Kong',
+     HU: 'Hungary',
+     IS: 'Iceland',
+     IN: 'India',
+     ID: 'Indonesia',
+     IR: 'Iran, Islamic Republic of',
+     IQ: 'Iraq',
+     IE: 'Ireland',
+     IM: 'Isle of Man',
+     IL: 'Israel',
+     IT: 'Italy',
+     JM: 'Jamaica',
+     JP: 'Japan',
+     JE: 'Jersey',
+     JO: 'Jordan',
+     KZ: 'Kazakhstan',
+     KE: 'Kenya',
+     KI: 'Kiribati',
+     KP: "Korea, Democratic People's Republic of",
+     KR: 'Korea, Republic of',
+     XK: 'Kosovo',
+     KW: 'Kuwait',
+     KG: 'Kyrgyzstan',
+     LA: "Lao People's Democratic Republic",
+     LV: 'Latvia',
+     LB: 'Lebanon',
+     LS: 'Lesotho',
+     LR: 'Liberia',
+     LY: 'Libyan Arab Jamahiriya',
+     LI: 'Liechtenstein',
+     LT: 'Lithuania',
+     LU: 'Luxembourg',
+     MO: 'Macao',
+     MK: 'Macedonia, the Former Yugoslav Republic of',
+     MG: 'Madagascar',
+     MW: 'Malawi',
+     MY: 'Malaysia',
+     MV: 'Maldives',
+     ML: 'Mali',
+     MT: 'Malta',
+     MH: 'Marshall Islands',
+     MQ: 'Martinique',
+     MR: 'Mauritania',
+     MU: 'Mauritius',
+     YT: 'Mayotte',
+     MX: 'Mexico',
+     FM: 'Micronesia, Federated States of',
+     MD: 'Moldova, Republic of',
+     MC: 'Monaco',
+     MN: 'Mongolia',
+     ME: 'Montenegro',
+     MS: 'Montserrat',
+     MA: 'Morocco',
+     MZ: 'Mozambique',
+     MM: 'Myanmar',
+     NA: 'Namibia',
+     NR: 'Nauru',
+     NP: 'Nepal',
+     NL: 'Netherlands',
+     AN: 'Netherlands Antilles',
+     NC: 'New Caledonia',
+     NZ: 'New Zealand',
+     NI: 'Nicaragua',
+     NE: 'Niger',
+     NG: 'Nigeria',
+     NU: 'Niue',
+     NF: 'Norfolk Island',
+     MP: 'Northern Mariana Islands',
+     NO: 'Norway',
+     OM: 'Oman',
+     PK: 'Pakistan',
+     PW: 'Palau',
+     PS: 'Palestinian Territory, Occupied',
+     PA: 'Panama',
+     PG: 'Papua New Guinea',
+     PY: 'Paraguay',
+     PE: 'Peru',
+     PH: 'Philippines',
+     PN: 'Pitcairn',
+     PL: 'Poland',
+     PT: 'Portugal',
+     PR: 'Puerto Rico',
+     QA: 'Qatar',
+     RE: 'Reunion',
+     RO: 'Romania',
+     RU: 'Russian Federation',
+     RW: 'Rwanda',
+     BL: 'Saint Barthelemy',
+     SH: 'Saint Helena',
+     KN: 'Saint Kitts and Nevis',
+     LC: 'Saint Lucia',
+     MF: 'Saint Martin',
+     PM: 'Saint Pierre and Miquelon',
+     VC: 'Saint Vincent and the Grenadines',
+     WS: 'Samoa',
+     SM: 'San Marino',
+     ST: 'Sao Tome and Principe',
+     SA: 'Saudi Arabia',
+     SN: 'Senegal',
+     RS: 'Serbia',
+     CS: 'Serbia and Montenegro',
+     SC: 'Seychelles',
+     SL: 'Sierra Leone',
+     SG: 'Singapore',
+     SX: 'Sint Maarten',
+     SK: 'Slovakia',
+     SI: 'Slovenia',
+     SB: 'Solomon Islands',
+     SO: 'Somalia',
+     ZA: 'South Africa',
+     GS: 'South Georgia and the South Sandwich Islands',
+     SS: 'South Sudan',
+     ES: 'Spain',
+     LK: 'Sri Lanka',
+     SD: 'Sudan',
+     SR: 'Suriname',
+     SJ: 'Svalbard and Jan Mayen',
+     SZ: 'Swaziland',
+     SE: 'Sweden',
+     CH: 'Switzerland',
+     SY: 'Syrian Arab Republic',
+     TW: 'Taiwan, Province of China',
+     TJ: 'Tajikistan',
+     TZ: 'Tanzania, United Republic of',
+     TH: 'Thailand',
+     TL: 'Timor-Leste',
+     TG: 'Togo',
+     TK: 'Tokelau',
+     TO: 'Tonga',
+     TT: 'Trinidad and Tobago',
+     TN: 'Tunisia',
+     TR: 'Turkey',
+     TM: 'Turkmenistan',
+     TC: 'Turks and Caicos Islands',
+     TV: 'Tuvalu',
+     UG: 'Uganda',
+     UA: 'Ukraine',
+     AE: 'United Arab Emirates',
+     GB: 'United Kingdom',
+     US: 'United States',
+     UM: 'United States Minor Outlying Islands',
+     UY: 'Uruguay',
+     UZ: 'Uzbekistan',
+     VU: 'Vanuatu',
+     VE: 'Venezuela',
+     VN: 'Viet Nam',
+     VG: 'Virgin Islands, British',
+     VI: 'Virgin Islands, U.s.',
+     WF: 'Wallis and Futuna',
+     EH: 'Western Sahara',
+     YE: 'Yemen',
+     ZM: 'Zambia',
+     ZW: 'Zimbabwe'
+
+ };
+
+ // Create an array to store the full names of the countries
+ const countryFullNames = countries.map(code => countryNames[code]);
+
+ const countryCodes = countries.map(code => `"${code}"`);
+
+
+ // Check if someone opens the page without using URL query parameters, if yes, show message
+ if (url !== "") {
+     urlPlaceholder.innerHTML = url;
+     urlPlaceholder.href = url;
+ } else {
+     urlPlaceholder.innerHTML = "You didn't set a URL to test";
+ }
+
+ if (countries !== "" || countries != null) {
+     countryPlaceholder.innerHTML = countryFullNames.join(", ");
+     console.log("Selected countries:", countries);
+     console.log(url);
+     console.log(countryCodes);
+ } else {
+     countryPlaceholder.innerHTML = "You didn't select the country";
+ }
+
+ // Make a request via Fetch API towards the backend on port 2002
+ // Method is POST, and response is in JSON
+ // Body contains the URL and the country code
+ const urlC = 'https://cors-anywhere.herokuapp.com/https://makhno.net/submission'; // Using a proxy temporary to avoid cors policy issues
+
+ fetch(urlC, {
+     method: 'POST',
+     headers: {
+         'Content-Type': 'application/json',
+         'x-requested-with': 'XMLHttpRequest',
+     },
+
+     body: '{"url":"' + url + '","countryCodes":[' + countryCodes + '],"marker":"set-by-advanced-options"}'
+
+
+ }).then(function(response) {
+     // The API call was successful!
+     if (response.ok) {
+         return response.json();
+     } else {
+         return Promise.reject(response);
+     }
+ }).then(function(data) {
+     // This is the JSON from our response
+     console.log(data);
+     createDynamicTables(data);
+ }).catch(function(err) {
+     // There was an error
+     console.warn('Something went wrong.', err);
+ });
+
+ //Dynamical table
+ function createDynamicTables(data) {
+     // Get the reference for the table bodies
+     var tableBodyPast = document.getElementById('table-body-past');
+     var tableBodyLast24 = document.getElementById('table-body-last24');
+     var messagePast = document.getElementById('table-message-past');
+     var messageLast24 = document.getElementById('table-message-last24');
+
+     // Clear the table bodies
+     tableBodyPast.innerHTML = '';
+     tableBodyLast24.innerHTML = '';
+
+     // Get the subject ID from the data
+     var subjectId = data.subject.id;
+
+     // Get the past and last24 arrays from the data
+     var pastArray = data.past;
+     var last24Array = data.last24;
+
+     // Function to create a table based on the provided array and table body
+     function createTable(array, tableBody, messageElement) {
+         // If the array is empty, display a message
+         if (array.length === 0) {
+             messageElement.textContent = 'No data available';
+         } else {
+             // Iterate over the array
+             for (var i = 0; i < array.length; i++) {
+                 // Create a new row
+                 var row = tableBody.insertRow();
+
+                 // Create cells for each column
+                 var statusCell = row.insertCell();
+                 var idCell = row.insertCell();
+                 var dateCell = row.insertCell();
+                 var vantagePointCell = row.insertCell();
+
+                 // Set the cell values
+                 statusCell.textContent = array[i].status;
+                 idCell.textContent = subjectId; // Use the subject ID
+                 dateCell.textContent = new Date(array[i].checkTimeUTC).toLocaleString(); // Format the date
+                 // Get the full country names based on the vantage point country codes
+                 var vantagePointCodes = array[i].vantagePoint.split(',');
+                 var vantagePointNames = vantagePointCodes.map(code => countryNames[code.trim()]);
+                 vantagePointCell.textContent = vantagePointNames.join(', ');
+             }
+         }
+     }
+
+     // Create the past table if it has data
+     if (pastArray.length > 0) {
+         createTable(pastArray, tableBodyPast, messagePast);
+     } else {
+         messagePast.textContent = 'No data available';
+     }
+
+     // Create the last24 table if it has data
+     if (last24Array.length > 0) {
+         createTable(last24Array, tableBodyLast24, messageLast24);
+     } else {
+         messageLast24.textContent = 'No data available';
+     }
+ }
     </script>
 
     {{ block "footer" . }}
