Added styles for the results page - List

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -775,8 +775,11 @@ dialog {
 // Results page
 .test-results {
   font-size: 1.25rem;
-  font-weight: 700;
-  text-transform: uppercase;
+  text-transform:uppercase;
+  color: $coolgray-900;
+  font-weight:600;
+  line-height: 3.75rem;
+  letter-spacing: -0.03125rem;
 }
 
 #test-url {
@@ -797,8 +800,71 @@ dialog {
   border-radius: 0.5rem;
 }
 
+section#map-results-table,
+section#past-results-table{
 
-.past-results td,
-.last24-results td {
-  padding: 8px; /* Adjust the padding value to your desired gap size */
+  hr{
+    width: calc(100% - 1.5rem);
+    color: $coolgray-400;
+  }
+}
+
+.past-results,
+.last24-results{
+  border-radius: 0.5rem;
+  border: 1px solid $coolgray-200;
+  background: $white;
+  width: 100%;
+  /* /shadow/base */
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.06), 0px 1px 3px 0px rgba(0, 0, 0, 0.10);
+  thead{
+    background-color: $coolgray-50;
+    border-bottom: 0.0625rem solid $coolgray-200;
+
+    th{
+      padding: 0.75rem 1.5rem;
+      color: $coolgray-500;
+      font-size: 0.75rem;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 1rem;
+      letter-spacing: 0.0375rem;
+    }
+  }
+  tbody{
+    tr{
+      border-bottom: 0.0625rem solid $coolgray-200;
+      td{
+        padding: 0.75rem 1.5rem;
+        color: $coolgray-500;
+        font-size: 0.875rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.25rem; /* 142.857% */
+        &::first-letter{
+          text-transform: capitalize;
+        }
+          span{
+            padding: 0rem 0.5rem;
+            border-radius: 2.25rem;            
+            
+            &.not_reachable{
+              background: var(--red-100, #FEE2E2);
+              color: var(--red-900, #7F1D1D);
+            }
+            &.validation_not_possible{
+              background: var(--yellow-100, #FEF3C7);
+              color: var(--yellow-900, #78350F);
+            }
+            &.reachable{
+              background: var(--green-100, #D1FAE5);
+              color: var(--green-900, #064E3B);
+            }
+            
+        }
+      }
+    }
+    
+  }
+
 }
