--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
                     <div class="video-wrapper background-teal-100 d-flex justify-content-center align-items-center">
                         <dialog id="ModalVideo">
                             <div class="container">
-                                <video class="responsive-video" controls autoplay>
+                                <video class="responsive-video" controls >
                                     <source src="/video/small.mp4" type="video/mp4">
                                     <source src="/video/small.webm" type="video/webm">
                                     <source src="/video/small.ogv" type="video/ogg">
