--- a/layouts/results/single.html
+++ b/layouts/results/single.html
@@ -3,6 +3,12 @@
 
 <head>
    {{ partial "head.html" . }} 
+   <!-- Include jQuery & jvecormap -->
+   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.3/jquery-jvectormap.min.css">
+   <script src="../js/jquery-3.6.0.min.js"></script>
+   <script src="../js/jquery-jvectormap-2.0.3.min.js"></script>
+   <script src="../js/jquery-jvectormap-world-mill.js"></script>
+
 </head>
 
 <body class='{{ .Title | lower }}'>
@@ -25,22 +31,36 @@
     <div id="content" class="content py-5" role="main">
         <div class="container-fluid">
             <div class="container-lg px-0">
-                <section id="map-results-table">
+                <section id="map-results-table" class="results-section">
                     <div class="row">
                         <h3 id="red-x" class="d-flex align-items-center">{{ partial "fontawesome.html" "solid/square-xmark" }} <span class="ms-2">Countries where content is blocked in the last 24h</span></h3>
                         <hr class="mx-auto mb-4">
+                    </div>                 
+                      <div class="results-content">
+                          <!-- Toggle Switch -->
+                        <div class="toggle-switch">
+                            <button id="showList" class="active">List</button>
+                            <button id="showMap">Map</button>
+                        </div>
+                        <div class="results-list">
+                            <table class="last24-results">
+                                <thead>
+                                  <tr>
+                                    <th>RESULT</th>                   
+                                    <th>DATE</th>
+                                    <th>TESTED FROM</th>
+                                  </tr>
+                                </thead>
+                                <tbody id="table-body-last24"></tbody>
+                              </table>
+                              <p id="table-message-last24" class="text-muted text-center pt-3 fs-5"></p>
+                        </div>
+                        <div class="results-map">
+                            <!-- World Map -->
+                            <div id="world-map" style="height:800px;"></div>
+                        </div>
                     </div>
-                    <table class="last24-results">
-                        <thead>
-                          <tr>
-                            <th>RESULT</th>                   
-                            <th>DATE</th>
-                            <th>TESTED FROM</th>
-                          </tr>
-                        </thead>
-                        <tbody id="table-body-last24"></tbody>
-                      </table>
-                      <p id="table-message-last24" class="text-muted text-center pt-3 fs-5"></p>
+
                 </section>
                 <section id="past-results-table" class="py-4">
                     <div class="row">
@@ -59,12 +79,13 @@
                       </table>
                       <p id="table-message-past" class="text-muted"></p>
                 </section>
+
             </div>
         </div>
     </div>
 
     <script>
-     // Function to get the query parameters on load, by fetching the country code and content URL
+// Function to get the query parameters on load, by fetching the country code and content URL
  const queryString = window.location.search;
  const urlParams = new URLSearchParams(queryString);
  const countries = urlParams.getAll("country");
@@ -352,40 +373,26 @@
  } else {
      countryPlaceholder.innerHTML = "You didn't select the country";
  }
+// Function to get the class based on the status
+function getStatusClass(status) {
+  switch (status) {
+    case 'not reachable':
+      return 'not_reachable';
+    case 'reachable':
+      return 'reachable';
+    case 'validation not possible':
+      return 'validation_not_possible';
+    case 'selected': // Add a case for the new 'selected' status
+      return 'selected'; // Replace 'selected' with the appropriate class name for selected countries
+    default:
+      return '';
+  }
+}
 
- // Make a request via Fetch API towards the backend on port 2002
- // Method is POST, and response is in JSON
- // Body contains the URL and the country code
- const urlC = 'https://cors-anywhere.herokuapp.com/https://makhno.net/submission'; // Using a proxy temporary to avoid cors policy issues
+//***** Dynamical table ******//
+//****************************//
 
- fetch(urlC, {
-     method: 'POST',
-     headers: {
-         'Content-Type': 'application/json',
-         'x-requested-with': 'XMLHttpRequest',
-     },
-
-     body: '{"url":"' + url + '","countryCodes":[' + countryCodes + '],"marker":"set-by-advanced-options"}'
-
-
- }).then(function(response) {
-     // The API call was successful!
-     if (response.ok) {
-         return response.json();
-     } else {
-         return Promise.reject(response);
-     }
- }).then(function(data) {
-     // This is the JSON from our response
-     console.log(data);
-     createDynamicTables(data);
- }).catch(function(err) {
-     // There was an error
-     console.warn('Something went wrong.', err);
- });
-
- //Dynamical table
- function createDynamicTables(data) {
+function createDynamicTables(data) {
      // Get the reference for the table bodies
      var tableBodyPast = document.getElementById('table-body-past');
      var tableBodyLast24 = document.getElementById('table-body-last24');
@@ -446,19 +453,6 @@
              }
          }
      }
-    // Function to get the class based on the status
-    function getStatusClass(status) {
-    switch (status) {
-        case 'not reachable':
-        return 'not_reachable';
-        case 'reachable':
-        return 'reachable';
-        case 'validation not possible':
-        return 'validation_not_possible';
-        default:
-        return '';
-    }
-    }
      // Create the past table if it has data
      if (pastArray.length > 0) {
          createTable(pastArray, tableBodyPast, messagePast);
@@ -473,6 +467,224 @@
          messageLast24.textContent = 'No data available';
      }
  }
+
+
+ // Function to populate the world map with data
+function populateWorldMap(data, countries) {
+  // Create an object to store the data in the format expected by jVectorMap
+  var mapData = {};
+
+console.log(countries);
+  // Iterate over the fetched data and add it to the mapData object
+  for (var i = 0; i < data.length; i++) {
+    var countryCode = data[i].vantagePoint.split(',')[0].trim();
+    var status = data[i].status;
+
+     // Add selected countries with a new status "selected" to the map data
+  for (var j = 0; j < countries.length; j++) {
+    var countryCode2 = countries[j];
+    if (!mapData[countryCode2]) {
+      // If the selected country data is not already present, add it
+      mapData[countryCode2] = 'selected';
+    }
+  }
+
+    // Set the status of the country in the map data
+    mapData[countryCode] = getStatusClass(status);
+    mapData[countryCode2] = getStatusClass(status);
+  }
+
+  // Initialize the jVectorMap with the mapData
+  $('#world-map').vectorMap({
+    map: 'world_mill',
+    backgroundColor:'white',
+    enableZoom: true,
+    hoverOpacity: null,
+    normalizeFunction: 'linear',
+    selectedRegions: [],
+    showTooltip: true,
+    regionStyle: {
+        initial: {
+            fill: '#F0FDFA',
+        "fill-opacity": 1,
+        stroke: 'black',
+        "stroke-width": 0.1,
+        "stroke-opacity": 1,
+            r:5
+        },
+		},
+    onRegionClick: function(event, code, region) {
+      // Handle click events on the map, if needed
+      // For example, you can navigate to a specific country's page or show more details
+      
+    },
+    // Set the data for the map using the mapData object
+    series: {
+      regions: [{
+        values: mapData,
+        scale: {
+          'not_reachable': '#7f1d1d', // Set colors for different statuses
+          'reachable': '#00FF00',
+          'validation_not_possible': '#FFFF00',
+          'selected': '#D97706', // Set color for selected countries
+        },
+        legend: {
+          vertical: true,
+          title: 'Test Status',
+          labelRender: function(valueText) {
+            // Customize legend labels, if needed
+            return valueText;
+          },
+        },
+      }],
+    },
+  });
+}
+
+ // Make a request via Fetch API towards the backend on port 2002
+ // Method is POST, and response is in JSON
+ // Body contains the URL and the country code
+ const urlC = 'https://cors-anywhere.herokuapp.com/https://makhno.net/submission'; // Using a proxy temporary to avoid cors policy issues
+
+//  fetch(urlC, {
+//      method: 'POST',
+//      headers: {
+//          'Content-Type': 'application/json',
+//          'x-requested-with': 'XMLHttpRequest',
+//      },
+
+//      body: '{"url":"' + url + '","countryCodes":[' + countryCodes + '],"marker":"set-by-advanced-options"}'
+
+
+//  }).then(function(response) {
+//      // The API call was successful!
+//      if (response.ok) {
+//          return response.json();
+//      } else {
+//          return Promise.reject(response);
+//      }
+//  }).then(function(data) {
+//      // This is the JSON from our response
+//      console.log(data);
+//      createDynamicTables(data);
+//      if (data.past.length > 0) {
+//       populateWorldMap(data.past); // Use data.past if available
+//     } else {
+//       console.log('No past data available for the world map.');
+//     }
+//  }).catch(function(err) {
+//      // There was an error
+//      console.warn('Something went wrong.', err);
+//  });
+
+
+//*** Testing with dummy data *****//    TO BE REMOVED
+//*********************************//
+
+const dummyData = {
+  "subject": {
+    "platform": "youtube",
+    "details": {
+      "videoId": "jfKtPsjJRdk"
+    },
+    "nature": "video",
+    "href": "https://www.youtube.com/watch?v=jfKtPsjJRdk",
+    "supported": true,
+    "id": "3e83ffdb69be57d810b2f301d5cf629c8b775265",
+    "creationTime": "2023-07-21T16:24:09.837Z",
+    "marker": "set-by-advanced-options",
+    "countryCodes": ["AO", "AG", "AM"],
+    "inserted": false
+  },
+  "testId": "my bad, this field should be removed",
+  "last24": [
+    {
+      "vantagePoint": "PK",
+      "status": "not reachable",
+      "checkTimeUTC": "2023-07-21T11:54:13.518Z"
+    },
+    {
+      "vantagePoint": "AL",
+      "status": "reachable",
+      "checkTimeUTC": "2023-07-21T04:54:21.559Z"
+    },
+    {
+      "vantagePoint": "IT",
+      "status": "validation not possible",
+      "checkTimeUTC": "2023-07-21T20:54:31.220Z"
+    },
+    {
+      "vantagePoint": "RU",
+      "status": "reachable",
+      "checkTimeUTC": "2023-07-21T20:54:31.220Z"
+    },
+    {
+      "vantagePoint": "CA",
+      "status": "not reachable",
+      "checkTimeUTC": "2023-07-21T20:54:31.220Z"
+    }
+  ],
+  "past": [
+  {
+      "vantagePoint": "PK",
+      "status": "reachable",
+      "checkTimeUTC": "2023-07-05T11:54:13.518Z"
+    },
+    {
+      "vantagePoint": "AL",
+      "status": "not reachable",
+      "checkTimeUTC": "2023-06-06T04:54:21.559Z"
+    },
+    {
+      "vantagePoint": "IT",
+      "status": "validation not possible",
+      "checkTimeUTC": "2023-06-06T20:54:31.220Z"
+    }
+  ]
+};
+// Replace the fetch call with this dummy data
+function fetchDataAndPopulate() {
+
+  createDynamicTables(dummyData);
+  if (dummyData.past.length > 0) {
+    populateWorldMap(dummyData.last24, countries); // Use dummyData.last24 if available
+  } else {
+    console.log('No past data available for the world map.');
+  }
+}
+
+// Call the function to fetch data and populate the tables and map
+fetchDataAndPopulate();
+
+
+
+
+// Function to toggle between List and Map views
+function toggleViews() {
+  const listButton = document.getElementById('showList');
+  const mapButton = document.getElementById('showMap');
+  const listSection = document.querySelector('.results-list');
+  const mapSection = document.querySelector('.results-map');
+
+  listButton.addEventListener('click', function () {
+    listButton.classList.add('active');
+    mapButton.classList.remove('active');
+    listSection.style.display = 'block';
+    mapSection.style.height = '0';
+  });
+
+  mapButton.addEventListener('click', function () {
+    mapButton.classList.add('active');
+    listButton.classList.remove('active');
+    mapSection.style.height = 'inherit';
+    listSection.style.display = 'none';
+  });
+}
+
+// Call the toggleViews function to enable the toggle functionality
+toggleViews();
+
+
     </script>
 
     {{ block "footer" . }}
